# gantry_crane_ws

./: .gitignore  PSO_Lyapunovcable_length.xlsx  PSO_Lyapunovcontrol.xlsx  PSO_Lyapunovposition.xlsx  PSO_Lyapunovsway_angle.xlsx  Trial SMC.xml  debug.sh  note.txt  setup.sh  test.ipynb  test.py  test2.py
PlotJuggler/: Step response 700 with random v1.csv  Step response 700 with random.csv
PlotJuggler Style/: style_set_plot_juggler.xml
PlotJuggler_style/: fault_detection_plot_layout.xml  gantry_crane_full_plot_layout.xml
misc code/: test2.py
src/controller_command_translator/: package.xml  setup.cfg  setup.py
src/controller_command_translator/controller_command_translator/: command_translator.py
src/gantry_crane_analysis/: CMakeLists.txt  package.xml
src/gantry_crane_analysis/scripts/: gantry_crane_analysis.py
src/gantry_crane_controller/: CMakeLists.txt  package.xml
src/gantry_crane_controller/data/: sliding_mode_controller_data.xlsx
src/gantry_crane_controller/log/2024-01-02/20-17-27/: sliding_mode_controller_falling_sweep_trolley_data_.xlsx  sliding_mode_controller_rising_sweep_trolley_data_.xlsx
src/gantry_crane_controller/log/2024-01-02/21-12-52/: sliding_mode_controller_falling_sweep_trolley_data_.xlsx  sliding_mode_controller_rising_sweep_trolley_data_.xlsx
src/gantry_crane_controller/log/2024-01-02/21-31-58/: sliding_mode_controller_falling_sweep_trolley_data_.xlsx  sliding_mode_controller_rising_sweep_trolley_data_.xlsx
src/gantry_crane_controller/log/2024-01-07/12-42-46/: sliding_mode_controller_falling_sweep_trolley_data_.xlsx
src/gantry_crane_controller/log/2024-01-07/17-35-12/: sliding_mode_controller_falling_sweep_hoist_data_1_increment.xlsx
src/gantry_crane_controller/log/2024-06-04/13-48-35/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx
src/gantry_crane_controller/log/2024-06-04/13-59-18/: pinn_controller_sweep_trolley_data.xlsx
src/gantry_crane_controller/log/2024-06-04/15-02-29/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx
src/gantry_crane_controller/log/2024-06-04/15-16-07/: pinn_controller_sweep_trolley_data.xlsx
src/gantry_crane_controller/log/2024-06-04/15-53-13/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx  pinn_controller_sweep_trolley_data.xlsx
src/gantry_crane_controller/log/2024-06-04/15-58-58/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx  pinn_controller_sweep_trolley_data.xlsx
src/gantry_crane_controller/log/2024-06-04/16-09-27/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx
src/gantry_crane_controller/log/2024-06-04/16-11-32/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx
src/gantry_crane_controller/log/2024-06-04/16-12-49/: pinn_controller_rising_sweep_trolley_data_1_increment.xlsx  (+1 more)
src/gantry_crane_controller/parameters/: gantry_crane_parameters.json  sliding_mode_controller_parameters.json
src/gantry_crane_controller/pinn_models/: Model 8 input 100 param dHa ass FIX jit.pt  Model 8 input 100 param dHa ass FIX nop jit.pt  Model 8 input 100 param dHa ass FIX nop tet jit.pt  Model 8-20-20-20-19 sript.pt  Model 8-20-20-20-19.pt  Model FINAL 18 jun.pt
src/gantry_crane_controller/scripts/: PSO_Lyapunovcable_length.xlsx  PSO_Lyapunovcontrol.xlsx  PSO_Lyapunovposition.xlsx  PSO_Lyapunovsway_angle.xlsx  PSO_PIDcable_length.xlsx  PSO_PIDcontrol.xlsx  PSO_PIDposition.xlsx  PSO_PIDsway_angle.xlsx  controller.py  fuzzy_sliding_mode_controller (1).py  fuzzy_sliding_mode_controller.py  lyapunov_controller_with_postcompensator_SAVEDDATA.py  lyapunov_controller_with_postcompensator_SAVEDDATA_april.py  pid_control_for_comparasion.py  pid_controller.py  pid_controller_with_compensator.py  pid_controller_with_postcompensator.py  pid_controller_with_postcompensatorXL.py  pid_controller_with_postcompensator_SAVEDDATA.py  pinn_controller.py  pinn_controller_noL.py  pinn_main.py  sliding_mode_controller.py  temp.py  template_controller.py  utility.py
src/gantry_crane_controller/scripts/gantry_crane_lib/: logger.py  ros_connector.py
src/gantry_crane_esp32/: platformio.ini  test.py
src/gantry_crane_esp32/include/: parameter.h  utility.h  variable.h
src/gantry_crane_esp32/lib/LED/: LED.h
src/gantry_crane_esp32/lib/debounce/: debounce.cpp  debounce.hpp
src/gantry_crane_esp32/lib/encoder/: encoder.cpp  encoder.hpp
src/gantry_crane_esp32/lib/motor/: motor.cpp  motor.hpp
src/gantry_crane_esp32/lib/pid/: pid.hpp
src/gantry_crane_esp32/src/: ADC.hpp  FreeRTOS_task.hpp  LED.h  component.h  lookUpTable.hpp  main.cpp  microROS.h  microROS.hpp
src/gantry_crane_interfaces/: CMakeLists.txt  package.xml
src/gantry_crane_interfaces/msg/: ControllerCommand.msg
src/gantry_crane_interfaces/srv/: RealsenseYOLO.srv
src/gantry_parameter_optimization/: optimization.py  preprocess_data.py
src/gantry_parameter_optimization/data/: preprocess_sliding_mode_controller_data.xlsx  sliding_mode_controller_data.xlsx
src/realsense_camera_yolo/: CMakeLists.txt  callibration.py  package.xml
src/realsense_camera_yolo/callibration/: callibration.py
src/realsense_camera_yolo/include/moving_average/: moving_average.hpp
src/realsense_camera_yolo/include/point_projections/: point_projections.hpp
src/realsense_camera_yolo/include/realsense_camera/: realsense_camera.hpp  realsense_parameter.hpp
src/realsense_camera_yolo/include/transformations/: transformations.hpp
src/realsense_camera_yolo/launch/: realsense_camera_yolo_launch.py
src/realsense_camera_yolo/scripts/: realsense_yolo.py  realsense_yolo_node.py
src/realsense_camera_yolo/src/: parameter.hpp  realsense_camera.cpp  realsense_parameter.hpp
src/realsense_camera_yolo_interfaces/: CMakeLists.txt  package.xml
src/realsense_camera_yolo_interfaces/srv/: RealsenseYOLO.srv
src/sliding_mode_controller/: CMakeLists.txt  package.xml
src/sliding_mode_controller/data/: sliding_mode_controller_data.xlsx
src/sliding_mode_controller/scripts/: gantry_crane_parameters.json  pid_controller.py  sliding_mode_controller.py  sliding_mode_controller_parameters.json
(+62 files in other folders)
